[package]
name = "rskit"
version = "0.0.37"
edition = "2024"
license = "MIT"
description = "rust kit"
documentation = "https://docs.rs/rskit"
repository = "https://gitee.com/itooling/rskit"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.95"
base58 = "0.2.0"
base64 = "0.22.1"
bincode = "1.3.3"
cbc = { version = "0.1.2", features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
cron = "0.15.0"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
fast_log = "1.7.3"
hex = "0.4.3"
hex-literal = "0.4.0"
k256 = { version = "0.13.4", features = ["ecdh"] }
log = "0.4.21"
md5 = "0.7.0"
notify = "8.0.0"
num-bigint = "0.4.6"
p256 = { version = "0.13.2", features = ["ecdh"] }
percent-encoding = "2.3.1"
rand = "0.8.5"
redis = "0.26.1"
reqwest = { version = "0.12.5", features = ["json"] }
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
sqlx = { version = "0.8.0", features = ["chrono", "macros", "runtime-tokio", "sqlite", "postgres"] }
sysinfo = "0.33.1"
tokio = { version = "1.39.2", features = ["full"] }

[target.'cfg(target_os="windows")'.dependencies]
winreg = "0.55.0"
