[package]
name = "rskit"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A collection of useful Rust utilities: encoding, hashing, crypto, serde helpers, cache, scheduling, IDs, retry, validation, and optional db/http/redis integrations."
documentation = "https://docs.rs/rskit"
repository = "https://github.com/vtooling/rskit"
readme = "README.md"
keywords = ["kit", "utilities", "crypto", "encoding", "toolkit"]
categories = ["development-tools", "cryptography", "encoding"]

[features]
default = ["full"]
full = ["db", "http", "redis", "sys", "id", "pass", "jwt", "totp", "compress"]
db = ["dep:sqlx", "dep:dotenvy"]
http = ["dep:reqwest"]
redis = ["dep:redis"]
sys = ["dep:sysinfo"]
id = ["dep:uuid", "dep:nanoid", "dep:ulid"]
pass = ["dep:argon2", "dep:bcrypt"]
jwt = ["dep:jsonwebtoken"]
totp = ["dep:sha1"]
compress = ["dep:flate2", "dep:zstd"]

[dependencies]
anyhow = "1.0.95"
base58 = "0.2.0"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
cron = "0.15.0"
fast_log = "1.7.3"
hex = "0.4.3"
hmac = "0.12.1"
humantime = "2.1.0"
log = "0.4.21"
notify = "8.0.0"
num-bigint = "0.4.6"
percent-encoding = "2.3.1"
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.39.2", features = ["full"] }

# crypto
aes = "0.8.4"
aes-gcm = "0.10.3"
cbc = { version = "0.1.2", features = ["std"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex-literal = "0.4.0"
k256 = { version = "0.13.4", features = ["ecdh"] }
md5 = "0.7.0"
p256 = { version = "0.13.2", features = ["ecdh"] }
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
sha2 = "0.10.8"

# optional integrations
dotenvy = { version = "0.15.7", optional = true }
redis = { version = "0.26.1", optional = true, features = ["tokio-comp"] }
reqwest = { version = "0.12.5", features = ["json"], optional = true }
sqlx = { version = "0.8.0", features = ["chrono", "macros", "runtime-tokio", "sqlite", "postgres"], optional = true }
sysinfo = { version = "0.33.1", optional = true }

# optional ids
uuid = { version = "1.10", optional = true, features = ["v4", "v7"] }
nanoid = { version = "0.4.0", optional = true }
ulid = { version = "1.1", optional = true }

# optional crypto extras
argon2 = { version = "0.5.3", optional = true }
bcrypt = { version = "0.15.1", optional = true }
jsonwebtoken = { version = "9.3", optional = true }
sha1 = { version = "0.10.6", optional = true }

# optional compression
flate2 = { version = "1.0.33", optional = true }
zstd = { version = "0.13.2", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
winreg = "0.55.0"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full", "test-util"] }

[[example]]
name = "db_demo"
required-features = ["db"]
